# ballista-map-partition

./: .gitignore  AI_DRIVEN_DEVELOPMENT_CASE.md  CLAUDE.md  Cargo.toml  DESIGN.md  PERF.md  README.md  design.md
crates/ballista-map-partition/: Cargo.toml  build.rs
crates/ballista-map-partition/examples/: ballista_client.rs  ballista_executor.rs  ballista_scheduler.rs  bench_region_cluster_client.rs  datafusion.rs  distributed_compute_client.rs  distributed_compute_executor.rs  distributed_compute_scheduler.rs  face_cluster_client.rs  region_cluster_client.rs
crates/ballista-map-partition/proto/: datafusion_common.proto  extension.proto
crates/ballista-map-partition/src/: lib.rs
crates/ballista-map-partition/src/codec/: extension.rs  messages.rs  mod.rs
crates/ballista-map-partition/src/dataframe/: map_partition.rs
crates/ballista-map-partition/src/logical/: map_partition.rs  mod.rs
crates/ballista-map-partition/src/physical/: map_partition_exec.rs  mod.rs
crates/ballista-map-partition/src/physical_optimizer/: enforce_distribute_by.rs  mod.rs
crates/ballista-map-partition/src/planner/: extension_planner.rs  mod.rs
crates/ballista-map-partition/tests/: e2e.rs
crates/ballista-monitor/: Cargo.toml
crates/ballista-monitor/src/: collector.rs  dashboard.rs  lib.rs  log_collector.rs  metrics.rs  registry.rs  server.rs  store.rs
crates/map-partition-sdk/: Cargo.toml
crates/map-partition-sdk/examples/face_cluster_processor/: Cargo.toml
crates/map-partition-sdk/examples/identity_processor/: Cargo.toml
crates/map-partition-sdk/examples/noop_processor/: Cargo.toml
crates/map-partition-sdk/src/: export.rs  ipc.rs  lib.rs  processor.rs
data/: test.parquet
data/face_capture/: face_capture.parquet
data/region_face_capture/: region_face_capture.parquet
docs/: design.md
scripts/: bench.sh  scaffold.sh
(+5 files in other folders)
