[package]
name = "ballista-map-partition"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Ballista extension providing a map_partition operator backed by .so dynamic libraries"

[dependencies]
async-trait = { version = "0.1" }

ballista = { version = "52" }
ballista-scheduler = { version = "52", default-features = false, features = ["build-binary"] }
ballista-executor = { version = "52" }
ballista-core = { version = "52" }

datafusion = { version = "52" }
datafusion-proto = { version = "52" }
datafusion-proto-common = { version = "52" }

futures = { version = "0.3" }
futures-util = { version = "0.3" }

log = "0.4"

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1" }

prost = { version = "0.14" }
prost-types = { version = "0.14" }

tonic = { version = "0.14" }

arrow-ipc = { version = "54" }
libloading = "0.8"
libc = "0.2"

[dev-dependencies]
env_logger = "0.11"

[build-dependencies]
tonic-build = { version = "0.14" }
tonic-prost-build = { version = "0.14" }
