[package]
name = "ballista-monitor"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Monitoring and dashboard for Ballista map-partition cluster"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
once_cell = "1"
